# 3D_Model_Viewing_Software

./: .gitignore  .travis.yml  CMakeLists.txt  Danielius_file.txt  Doxyfile  README.md  _cell_8h.html  _cell_8h_source.html  _data_pipeline_8h.html  _data_pipeline_8h_source.html  _material_8h.html  _material_8h_source.html  _matrix3x3_8h.html  _matrix3x3_8h_source.html  _model_8h.html  _model_8h_source.html  _pipeline_8h.html  _pipeline_8h_source.html  _poly_pipeline_8h.html  _poly_pipeline_8h_source.html  _v_t_k_object_handler_8h.html  _v_t_k_object_handler_8h_source.html  _vector3_d_8h.html  _vector3_d_8h_source.html  _viewer_handler_8h.html  _viewer_handler_8h_source.html  annotated.html  apphelp_8h.html  apphelp_8h_source.html  class_app_help-members.html  class_app_help.html  class_cell-members.html  class_cell.html  class_data_pipeline-members.html  class_data_pipeline.html  class_datapipeline-members.html  class_datapipeline.html  class_hexahedron-members.html  class_hexahedron.html  class_main_window-members.html  (+88 more)
Class notes/: Matrix3x3README(Danielius).txt  ModelREADME(Danielius).txt
GUI_source/: CMakeLists.txt  apphelp.cpp  apphelp.h  main.cpp  mainwindow.cpp  mainwindow.cpp.save-failed  mainwindow.h  mainwindow.ui  newshapechoice.cpp  newshapechoice.ui
GUI_source/Inc/: FiltersStorage.h  Pipeline.h  PipelineHandler.h  PipelineInfo.h  VTKObjectHandler.h  ViewerHandler.h
GUI_source/Src/: Pipeline.cpp  PipelineHandler.cpp  VTKObjectHandler.cpp  ViewerHandler.cpp
Inc/: CMakeLists.txt  Cell.h  Material.h  Matrix.h  Matrix3x3.h  Model.h  ModelClass.h  Vector3D.h
Material_class/: material class.cpp
Matrix class/: Matrix.cpp  test_program.cpp
Model_Library/: CMakeLists.txt  README.md
Model_Library/Class notes/: MaterialREADME(Chen).txt  VectorREADME(Woranan).txt
Model_Library/Inc/: CMakeLists.txt  Cell.h  Material.h  Matrix3x3.h  Model.h  Vector3D.h
Model_Library/Src/: CMakeLists.txt  Cell.cpp  Material.cpp  Model.cpp  Vector3D.cpp
Model_class/: main.cpp
Model_class/include/: ModelClass.cpp
Model_class/models/: ExampleModel1.mod
RendererClass(Not finished)/: RendererREADME(Danielius).txt
RendererClass(Not finished)/Inc/: Renderer.h
RendererClass(Not finished)/Src/: Renderer.cpp
Resources/: README.md
Resources/GUI_Icons/: README.md  exeIcon.rc  resource.qrc
Resources/Test_Models/: ExampleModel1.mod  README.md
Software_GUI/: CMakeLists.txt  README.md  apphelp.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  newshapechoice.cpp  newshapechoice.h  newshapechoice.ui
Software_GUI/Class notes/: CellREADME(Michael).txt  Matrix3x3README(Danielius).txt  ModelREADME(Danielius).txt
Software_GUI/Inc/: DataPipeline.h  Pipeline.h  PolyPipeline.h  README.md  VTKObjectHandler.h  ViewerHandler.h  ViewerHandler.h.save-failed
Software_GUI/Src/: DataPipeline.cpp  Pipeline.cpp  PolyPipeline.cpp  README.md  VTKObjectHandler.cpp  ViewerHandler.cpp
Software_GUI/UI/: README.md  apphelp.cpp  apphelp.h  apphelp.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newshapechoice.cpp  newshapechoice.h  newshapechoice.ui
Software_GUI/images/: resource.qrc
Src/: CMakeLists.txt  Cell.cpp  Material.cpp  Matrix.cpp  Matrix3x3.cpp  Model.cpp  ModelClass.cpp  Vector3D.cpp
Test_programs/: CMakeLists.txt  Matrix_test.cpp  Model_test.cpp  NewExampleModel2.mod  demo.cpp  vector3Dtest.cpp
Vector_class/: Vector3D.cpp  Vector3D.h  vector.cpp  vector.h
cell_class/groupprojectcell/: groupprojectcell.cbp  groupprojectcell.depend  groupprojectcell.layout  main.cpp
html/: _cell_8h.html  _cell_8h_source.html  _material_8h.html  _material_8h_source.html  _matrix3x3_8h.html  _matrix3x3_8h_source.html  _model_8h.html  _model_8h_source.html  _pipeline_8h_source.html  _v_t_k_object_handler_8h_source.html  _vector3_d_8h.html  _vector3_d_8h_source.html  _viewer_handler_8h_source.html  annotated.html  apphelp_8h_source.html  class_app_help-members.html  class_app_help.html  class_cell-members.html  class_cell.html  class_hexahedron-members.html  class_hexahedron.html  class_main_window-members.html  class_main_window.html  class_material-members.html  class_material.html  class_matrix3x3-members.html  class_matrix3x3.html  class_model-members.html  class_model.html  class_new_shape_choice-members.html  class_new_shape_choice.html  class_pipeline-members.html  class_pipeline.html  class_pyramid-members.html  class_pyramid.html  class_tetrahedron-members.html  class_tetrahedron.html  class_v_t_k_object_handler-members.html  class_v_t_k_object_handler.html  class_vector3_d-members.html  (+24 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  (+17 more)
latex/: annotated.tex  class_app_help.eps  class_app_help.tex  class_cell.eps  class_cell.tex  class_hexahedron.eps  class_hexahedron.tex  class_main_window.tex  class_material.tex  class_matrix3x3.tex  class_model.tex  class_new_shape_choice.eps  class_new_shape_choice.tex  class_pyramid.eps  class_pyramid.tex  class_tetrahedron.eps  class_tetrahedron.tex  class_vector3_d.tex  dir_413f4e031a85da0d68269c6fd2f76e1c.tex  dir_a06b47a50fc14e8efea84b1aa3614b8b.tex  dir_f93dfce691d792349f1c14ede440e2e6.tex  hierarchy.tex  refman.tex  structcell_info.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+9 more)
test_sources/: CMakeLists.txt  README.md  celltest.cpp  materialtest.cpp  modeltest.cpp  vector3Dtest.cpp
(+3 files in other folders)
